--- a/_posts/develop/ds_ai/2025-03-25-al6.md
+++ b/_posts/develop/ds_ai/2025-03-25-al6.md
@@ -789,28 +789,24 @@ return S  // S is the set of scheduled jobs with maximum total profit
 ---
 
 **증명:**  
-S가 feasible하다고 하자. 그렇다면 적어도 하나의 feasible한 순서가 존재한다.
-job x가 job y보다 먼저 스케줄링되어 있고, job y의 마감기한이 더 이르다고 가정하자
+S가 feasible하다고 하자. 그렇다면 적어도 하나의 feasible한 순서가 존재한다.<br>
+job x가 job y보다 먼저 스케줄링되어 있고, job y의 마감기한이 더 이르다고 가정하자<br>
 
-이 두 작업의 순서를 바꾸어도 바꾼 순서도 여전히 feasible함
-•  job y는 더 빨리 시작하게 되므로 마감기한을 지킬 수 있고  
-•  job x도 이전 시간대를 사용하므로 마감기한 내에 완료 가능
+이 두 작업의 순서를 바꾸어도 바꾼 순서도 여전히 feasible함<br>
+•  job y는 더 빨리 시작하게 되므로 마감기한을 지킬 수 있고  <br>
+•  job x도 이전 시간대를 사용하므로 마감기한 내에 완료 가능<br>
 
-이러한 성질을 반복적으로 적용하여 **Exchange Sort**를 통해  
-정렬된 순서가 feasible하다면 전체도 feasible하다고 증명할 수 있음
+이러한 성질을 반복적으로 적용하여 **Exchange Sort**를 통해  <br>
+정렬된 순서가 feasible하다면 전체도 feasible하다고 증명할 수 있음<br>
 
-결론적으로,  **정렬된 순서가 feasible하면 → 해당 집합 S는 feasible하다.**
-
-
- **Feasibility 판별 예시**
-
-- 집합 {1, 2, 4, 7}의 가능한 순서 중 하나가 [2, 7, 1, 4]라고 하자.
-- 각 작업의 마감기한을 해당 순서대로 표시하면:  
-  `1 2 3 3` (시간 슬롯)
-- 총 4개의 작업을 3개의 시간 슬롯에 넣으려 하므로 **불가능** (feasible하지 않음)
+결론적으로,  **정렬된 순서가 feasible하면 → 해당 집합 S는 feasible하다.**<br>
 
 
-### 🔹 **C++ 스타일 의사코드**
+**Feasibility 판별 예시**<br>
+• 집합 {1, 2, 4, 7}의 가능한 순서 중 하나가 [2, 7, 1, 4]라고 하자<br>
+•  각 작업의 마감기한을 해당 순서대로 표시하면: `1 2 3 3` (시간 슬롯)<br>
+•  총 4개의 작업을 3개의 시간 슬롯에 넣으려 하므로 **불가능** (feasible하지 않음)<br>
+
 
 ```cpp
 
@@ -850,30 +846,27 @@ void schedule(int n, const int deadline[], sequence_of_integer& J) {
 | 6   | 3        |
 | 7   | 2        |
 
-**단계별 실행:**
-1. J = [1]
-2. K = [2, 1] → feasible → J = [2, 1]
-3. K = [2, 3, 1] → not feasible → reject
-4. K = [2, 1, 4] → feasible → J = [2, 1, 4]
-5. K = [2, 5, 1, 4] → not feasible → reject
-6. K = [2, 1, 6, 4] → not feasible → reject
-7. K = [2, 7, 1, 4] → not feasible → reject
+**단계별 실행:**<br>
+• J = [1]<br>
+• K = [2, 1] → feasible → J = [2, 1]<br>
+• K = [2, 3, 1] → not feasible → reject<br>
+• K = [2, 1, 4] → feasible → J = [2, 1, 4]<br>
+• K = [2, 5, 1, 4] → not feasible → reject<br>
+• K = [2, 1, 6, 4] → not feasible → reject<br>
+• K = [2, 7, 1, 4] → not feasible → reject<br>
 
-✅ **최종 결과:**  
-\( J = [2, 1, 4] \)
+**최종 결과:**  <br>
+$J = [2, 1, 4]$
 
----
 
-### 🔹 **최악 시간 복잡도 (Worst-Case Time Complexity)**
+**최악 시간 복잡도 (Worst-Case Time Complexity)**<br>
 
-- **기본 연산:**  
-  - 작업 정렬 시: 비교 필요  
-  - 매 반복마다: \( J + i \) 집합이 feasible한지 확인하는 비교 필요
+**기본 연산**  
+• 작업 정렬 시: 비교 필요  <br>
+• 매 반복마다: \( J + i \) 집합이 feasible한지 확인하는 비교 필요<br>
+• **입력 크기: $n$ 작업 수<br>
+• **정렬 시간:$\Theta(n \log n)$<br>
+• **반복문 내 비교:** $i4번째 루프에서 최대 $i-1$개의 비교 → 합치면 $\sum_{i=2}^n [(i-1) + i] = n^2 - 1 \in \Theta(n^2)$
 
-- **입력 크기: $n$ 작업 수
-- **정렬 시간:$\Theta(n \log n)$
-- **반복문 내 비교:**  
-  - \( i \)번째 루프에서 최대 \( i-1 \)개의 비교 → 합치면 \( \sum_{i=2}^n [(i-1) + i] = n^2 - 1 \in \Theta(n^2) \)
-
-$W(n) \in \Theta(n^2)$
+**$W(n) \in \Theta(n^2)$**
 
