--- a/_posts/develop/ds_ai/2025-03-25-al6.md
+++ b/_posts/develop/ds_ai/2025-03-25-al6.md
@@ -859,13 +859,13 @@ void schedule(int n, const int deadline[], sequence_of_integer& J) {
 $J = [2, 1, 4]$
 
 
-**최악 시간 복잡도 (Worst-Case Time Complexity)**<br>
+**[ 최악 시간 복잡도 (Worst-Case Time Complexity)** ]<br>
 
 **기본 연산**  
 • 작업 정렬 시: 비교 필요  <br>
 • 매 반복마다: \( J + i \) 집합이 feasible한지 확인하는 비교 필요<br>
 • **입력 크기: $n$ 작업 수<br>
-• **정렬 시간:$\Theta(n \log n)$<br>
+• **정렬 시간**:$\Theta(n \log n)$<br>
 • **반복문 내 비교:** $i4번째 루프에서 최대 $i-1$개의 비교 → 합치면 $\sum_{i=2}^n [(i-1) + i] = n^2 - 1 \in \Theta(n^2)$
 
 **$W(n) \in \Theta(n^2)$**
