--- a/_posts/develop/ds_ai/2025-03-25-al6.md
+++ b/_posts/develop/ds_ai/2025-03-25-al6.md
@@ -866,7 +866,7 @@ $J = [2, 1, 4]$
 • 매 반복마다: $J + i$ 집합이 feasible한지 확인하는 비교 필요<br>
 • **입력 크기**: $n$ 작업 수<br>
 • **정렬 시간**: $\Theta(n \log n)$<br>
-• **반복문 내 비교:** $i4$번째 루프에서 최대 $i-1$개의 비교 → 합치면 $\sum_{i=2}^n [(i-1) + i] = n^2 - 1 \in \Theta(n^2)$
+• **반복문 내 비교:** $i4$번째 루프에서 최대 $i-1$개의 비교 <br>→ 합치면 $\sum_{i=2}^n [(i-1) + i] = n^2 - 1 \in \Theta(n^2)$
 
 **$W(n) \in \Theta(n^2)$**
 
