--- a/_posts/develop/ds_ai/2025-03-24-al5-2.md
+++ b/_posts/develop/ds_ai/2025-03-24-al5-2.md
@@ -441,6 +441,8 @@ $T(64) = 200$<br>
 
 **[ 행렬 곱셈 문제 ]**
 > 두 개의 $2 \times 2$ 행렬 A와 B의 곱 $C$를 구한다고 가정
+• Strassen의 방법은 7개의 곱셈과 18개의 덧셈/뺄셈 필요<br>
+• 반면 직관적인 방법은 8($n^3$)개의 곱셈과 4($n^2$)개의 덧셈/뺄셈
 
 $$
 \begin{bmatrix}
@@ -459,8 +461,6 @@ b_{21} & b_{22}
 \end{bmatrix}
 $$
 
-=> 곱셈이 8번<br>
-=> Strassen은 다음과 같이 하면 된다고 결정: 곱셈이 7번
 
 $$
 \begin{aligned}
@@ -474,22 +474,20 @@ m_7 &= (a_{12} - a_{22})(b_{21} + b_{22})
 \end{aligned}
 $$
 
-그렇다면 곱 \( C \)는 다음과 같이 주어진다:
+그렇다면 곱 $C$는 다음과 같이 주어진다:
 
-\[
+$$
 C =
 \begin{bmatrix}
 m_1 + m_4 - m_5 + m_7 & m_3 + m_5 \\
 m_2 + m_4 & m_1 + m_3 - m_2 + m_6
 \end{bmatrix}
-\]
+$$
 
----
 
-### Slide 3: Strassen’s Matrix Multiplication (계속)
 
-- 두 개의 \( 2 \times 2 \) 행렬을 곱하기 위해, Strassen의 방법은 7개의 곱셈과 18개의 덧셈/뺄셈이 필요하다. 반면 직관적인 방법은 8개의 곱셈과 4개의 덧셈/뺄셈만 필요하다. (더 안 좋다?)
-  - \( 2 \times 2 \) 행렬의 경우 Strassen의 방법은 아무런 가치가 없다.
+
+$2 \times 2$행렬의 경우 Strassen의 방법은 아무런 가치가 없다.
 
 - 그러나!!
 
