--- a/_posts/develop/ds_ai/2025-03-24-al5-2.md
+++ b/_posts/develop/ds_ai/2025-03-24-al5-2.md
@@ -485,13 +485,12 @@ m_2 + m_4 & m_1 + m_3 - m_2 + m_6
 $$
 
 
+$2 \times 2$행렬의 경우 Strassen의 방법은 아무런 가치가 없다?
 
+<br>
+> 더 고차원 행렬에서 Strassen의 방
 
-$2 \times 2$행렬의 경우 Strassen의 방법은 아무런 가치가 없다.
-
-- 그러나!!
-
-\[
+$$
 A_{11} =
 \begin{bmatrix}
 a_{11} & a_{12} \cdots a_{1,n/2} \\
@@ -499,27 +498,18 @@ a_{21} & a_{22} \cdots a_{2,n/2} \\
 \vdots & \\
 a_{n/2,1} & \cdots a_{n/2,n/2}
 \end{bmatrix}
-\]
+$$
 
-Strassen의 방법을 사용하여, 먼저 다음을 계산한다:
 
-\[
-M_1 = (A_{11} + A_{22})(B_{11} + B_{22})
-\]
+$M_1 = (A_{11} + A_{22})(B_{11} + B_{22})$<br>
+$M_2$부터 $M_7$까지 계산<br>
+그후 더하기 $C_{11} = M_1 + M_4 - M_5 + M_7$
 
-여기서 연산은 이제 행렬 덧셈과 곱셈이다. 같은 방식으로 \( M_2 \)부터 \( M_7 \)까지 계산한다. 그 다음 우리는 다음을 계산한다:
+<br>
 
-\[
-C_{11} = M_1 + M_4 - M_5 + M_7
-\]
+**[ Strassen 알고리즘에서의 부분 행렬로의 분할 ]**
 
----
-
-### Slide 4: Strassen’s Matrix Multiplication (계속)
-
-- **Strassen 알고리즘에서의 부분 행렬로의 분할**
-
-\[
+$$
 \begin{bmatrix}
 C_{11} & C_{12} \\
 C_{21} & C_{22}
@@ -534,16 +524,9 @@ A_{21} & A_{22}
 B_{11} & B_{12} \\
 B_{21} & B_{22}
 \end{bmatrix}
-\]
+$$
 
----
-
-### Slide 5: Strassen’s Matrix Multiplication (계속)
-
-- **예제**
-  - 다음과 같이 두 행렬 A와 B를 곱하려면:
-
-\[
+$$
 A =
 \begin{bmatrix}
 1 & 2 & 3 & 4 \\
@@ -559,11 +542,11 @@ B =
 7 & 8 & 9 & 1 \\
 2 & 3 & 4 & 5
 \end{bmatrix}
-\]
+$$
 
-- 행렬들을 부분 행렬로 나눈다:
+행렬들을 부분 행렬로 나눈다:
 
-\[
+$$
 \begin{bmatrix}
 C_{11} & C_{12} \\
 C_{21} & C_{22}
@@ -582,17 +565,12 @@ C_{21} & C_{22}
 7 & 8 & 9 & 1 \\
 2 & 3 & 4 & 5
 \end{bmatrix}
-\]
+$$
 
----
 
-### Slide 6: Strassen’s Matrix Multiplication (계속)
+Strassen의 방법을 사용하여 부분 행렬을 정복
 
-- **예제 (계속)**
-
-  - Strassen의 방법을 사용하여 부분 행렬을 정복
-
-\[
+$$
 M_1 = (A_{11} + A_{22})(B_{11} + B_{22}) \\
 = \left(
 \begin{bmatrix}
@@ -617,9 +595,9 @@ M_1 = (A_{11} + A_{22})(B_{11} + B_{22}) \\
 4 & 5
 \end{bmatrix}
 \right)
-\]
+$$
 
-\[
+$$
 = \begin{bmatrix}
 3 & 5 \\
 11 & 13
@@ -629,11 +607,11 @@ M_1 = (A_{11} + A_{22})(B_{11} + B_{22}) \\
 17 & 10 \\
 7 & 9
 \end{bmatrix}
-\]
+$$
 
-- 행렬들이 충분히 작아졌을 때, 표준 방식으로 곱한다:
+행렬들이 충분히 작아졌을 때, 표준 방식으로 곱한다:
 
-\[
+$$
 M_1 =
 \begin{bmatrix}
 3 & 5 \\
@@ -654,7 +632,7 @@ M_1 =
 86 & 75 \\
 278 & 227
 \end{bmatrix}
-\]
+$$
 
 다음은 제공된 슬라이드들의 내용을 **의역 없이 그대로 직역한 번역본**입니다.
 
