--- a/_posts/develop/ds_ai/2025-03-24-al5-2.md
+++ b/_posts/develop/ds_ai/2025-03-24-al5-2.md
@@ -488,7 +488,9 @@ $$
 $2 \times 2$행렬의 경우 Strassen의 방법은 아무런 가치가 없다?
 
 <br>
-> 더 고차원 행렬에서 Strassen의 방
+
+**[ 더 고차원 행렬에서 Strassen의 방법  ]**
+
 
 $$
 A_{11} =
@@ -609,7 +611,8 @@ $$
 \end{bmatrix}
 $$
 
-행렬들이 충분히 작아졌을 때, 표준 방식으로 곱한다:
+행렬들이 충분히 작아졌을 때, 표준 방식으로 곱한다:<br>
+사실 더 해도 되지만 여기까지하도록~~~
 
 $$
 M_1 =
@@ -634,9 +637,27 @@ M_1 =
 \end{bmatrix}
 $$
 
-다음은 제공된 슬라이드들의 내용을 **의역 없이 그대로 직역한 번역본**입니다.
 
----
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 ### Slide 1: 홀수 개의 행 또는 열일 때
 
