--- a/_posts/develop/ds_ai/2025-03-24-al5-2.md
+++ b/_posts/develop/ds_ai/2025-03-24-al5-2.md
@@ -440,7 +440,7 @@ $T(64) = 200$<br>
 
 
 **[ 행렬 곱셈 문제 ]**
-> 두 개의 $2 \times 2$ 행렬 A와 B의 곱 $C$를 구한다고 가정
+> 두 개의 $2 \times 2$ 행렬 A와 B의 곱 $C$를 구한다고 가정<br>
 • Strassen의 방법은 7개의 곱셈과 18개의 덧셈/뺄셈 필요<br>
 • 반면 직관적인 방법은 8($n^3$)개의 곱셈과 4($n^2$)개의 덧셈/뺄셈
 
