--- a/_posts/develop/ds_ai/2025-03-24-al5-2.md
+++ b/_posts/develop/ds_ai/2025-03-24-al5-2.md
@@ -640,14 +640,20 @@ $$
 
 
 
+<br>
 
+**[ 시간복잡도 분석 ]**
+> 💡 모든 경우의 곱셈 수에 대한 시간 복잡도 분석<br>
+• 두 개의 $n x n$ 행렬이 있고 $n>1$일 때, 알고리즘은 정확히 7번 호출<br>
+ • 각 호출마다 $(n/2) x (n/2)$크기의 행렬이 전달되고, 최상위 단계에서는 곱셈이 수행되지 않음<br>
+ • $T(n) = 7T\left(\frac{n}{2}\right)$, (단, $n > 1$ 이고 $n$ 은 $2$의 거듭제곱, $T(1) = 1$<br>
+• 해결: $T(n) = n^{\log_2 7} \approx n^{2.81} \in \Theta(n^{2.81})$
 
-
-
-
-
-
-
+> 💡 모든 경우의 덧셈/뺄셈 수에 대한 시간 복잡도 분석<br>
+• 두 개의 $(n/2) \times (n/2)$ 행렬이 **덧셈 또는 뺄셈**될 때, 각 원소에 대해 $(n/2)^2$번의 연산이 수행<br>
+• 수식:<br>
+$T(n) = 7T\left(\frac{n}{2}\right) + 18\left(\frac{n}{2}\right)^2$, (단, $n > 1$이고 $n$ 은 2의 거듭제곱), $T(1) = 0$<br>
+• 해결: $T(n) = 6n^{\log_2 7} - 6n^2 \approx 6n^{2.81} - 6n^2 \in \Theta(n^{2.81})$
 
 
 
