--- a/_posts/portfolio/whalley-score/2025-12-20-1.md
+++ b/_posts/portfolio/whalley-score/2025-12-20-1.md
@@ -1,14 +1,25 @@
 ---
-title: "Why am I select Next.js and FastAPI for whalley score project"
+title: "The reason I select Next.js and FastAPI for whalley score project"
 excerpt: "--!"
 
 categories: 
   - whalley-score
-tags: [개발]
+tags: [portfolio]
 toc: true
 author_profile: true 
 sidebar:
    nav: "docs"
 ---
 
+# What is Next.js?
+`Next.js` is full-stack web framework build on top or `React`.    
+While `React`is a library for building user interfaces, `Next.js` is a framework desigend to build real-world web applications using React.    
+With plain React, developers need to configure routing, server-side rendering, SEO, and build setting manually.    
+Next.js provides these features out of the box.   
 
+<br>
+
+# Rendering Methods in Next.js
+Next.js allows multiple rendering strategies within a single project.   
+- CSR: Rendering in the browser
+- SSR: Rendering on the 
