카테고리 수정

--- a/_posts/study-log/dev/2025-03-25-test.md
+++ b/_posts/study-log/dev/2025-03-25-test.md
@@ -1,8 +1,8 @@
 ---
-title: "[알고리즘] 탐욕 알고리즘과 탐욕 알고리즘의 적용"
+title: "테스트"
 excerpt: "크루스칼/프림 알고리즘, 다익스트라 알고리즘, 스케줄링 "
 categories:
-  - ds_ai
+  - dev
 tags: [알고리즘]
 use_math: true
 toc: true
