--- a/_posts/study-log/dev/2025-03-31-java_oop1.md
+++ b/_posts/study-log/dev/2025-03-31-java_oop1.md
@@ -2,7 +2,7 @@
 title: "[자바 객체지향] 클래스와 객체"
 excerpt: " 클래스와 객체, 생성자, 오버로딩"
 categories:
-  - language
+  - dev
 tags: [자바객체지향, Java]
 toc: true
 author_profile: true 
