--- a/_posts/study-log/dev/2025-03-10-java_01.markdown
+++ b/_posts/study-log/dev/2025-03-10-java_01.markdown
@@ -2,7 +2,7 @@
 title: "[자바기초] 자바의 개요"
 excerpt: "자바의 탄생, 발전, 구성요소, 실행환경 등을 알아보자"
 categories:
-  - language
+  - dev
 tags: [자바기초, Java]
 toc: true
 author_profile: true 
