--- a/_posts/study-log/dev/2025-03-11-java_02.markdown
+++ b/_posts/study-log/dev/2025-03-11-java_02.markdown
@@ -2,7 +2,7 @@
 title: "[자바기초] 자바의 기초 문법 총정리"
 excerpt: " 식과문장, 키워드와 예약어, 주석, 변수와 자료형, 연산자, 제어문"
 categories:
-  - language
+  - dev
 tags: [자바기초, Java]
 use_math: true
 toc: true
