--- a/_posts/study-log/dev/2025-03-19-al01-2.md
+++ b/_posts/study-log/dev/2025-03-19-al01-2.md
@@ -2,7 +2,7 @@
 title: "[알고리즘] 알고리즘과 알고리즘 분석"
 excerpt: "알고리즘, 효율적인 알고리즘 분석이 필요한 이유"
 categories:
-  - ds_ai
+  - dev
 tags: [알고리즘]
 use_math: true
 toc: true
