--- a/_posts/study-log/dev/2025-03-20-recur.md
+++ b/_posts/study-log/dev/2025-03-20-recur.md
@@ -2,7 +2,7 @@
 title: "[알고리즘 - 참고] 재귀호출의 효율성"
 excerpt: "재귀호출은 효율적인가? 재귀호출의 효율성에 관하여"
 categories:
-  - ds_ai
+  - dev
 tags: [알고리즘]
 toc: true
 author_profile: true 
