--- a/_posts/study-log/dev-log/2026-01-19-log1.md
+++ b/_posts/study-log/dev-log/2026-01-19-log1.md
@@ -15,14 +15,14 @@ sidebar:
 <br>
 
 # 목표
-`사담`<br>
-
+> `사담`<br>
 > Spring(이건 좀 오래되기는 했지만)과 Flask를 항상 써오다가 FastAPI를 처음 쓰려니깐 뭔가 약간 구조가 다른 듯해서 생각보다 
 프로젝트를 만드는 것이 좀 어렵다     
 > 일단 이미 프로젝트 구조는 chatGPT의 조언을 받으면서 실무에 맞게 나름 셋팅을 해두었고, 프론트쪽은 추후 수정하도록 할 예정이라서
 백엔드파트부터 개발일지 같은 걸 써보려고 한다
 > 이미 이슈 단위로 작업하는 게 너무 익숙해져서, 일지이기는 하지만 이슈를 기준으로 글을 적을 것 같다!
 
+<br>
 
 아무튼 정말 며칠간의 목표!!<br>
 다시 적긴 좀 그렇고, 그렇다고 링크만 달랑 넣기도 그렇고해서 우선 깃허브 레포의 이슈 본문을 복사해왔다!     
@@ -33,9 +33,9 @@ sidebar:
 ### Goal
 Set up a production-like database environment using PostgresSQL, Docker, SQLAlchemy, and Alembic.
 
-<br>
 
-#### Tasks
+
+### Tasks
 **[ Docker / PostgreSQL ]**    
 • Define postgres service in `compose.yml`(image, ports, volumes, env)    
 • Separate environment variables into `.env`    
