포스팅 수정

--- a/_posts/study-log/dev-log/2026-01-19-log1.md
+++ b/_posts/study-log/dev-log/2026-01-19-log1.md
@@ -85,6 +85,23 @@ Set up a production-like database environment using PostgresSQL, Docker, SQLAlch
 
 # 개발과정
 
+우선 프로젝트 구조에 맞게 도커에 db를 띄우고 sqlalchemy를 이용해 FastAPI와 연결했다!
+코드는 아래 글에 적어두었다
+
+그리고 의존성을 분리하기 위해 운영용으로 requirements.txt를, 로컬/개발용으로 requirements-dev.txt를 만들었다
+
+Alembic은 DB + 모델이 있는 서비스 루트를 기준으로 둔다
+alembic을 설치하고
+alembic init alembic을 하면 자동으로 설치가 되고
+
+alembic.ini: 환경변수에서 DATABASE_URL을 읽게 한다
+
+```ini
+sqlalchemy.url = %(DATABASE_URL)s
+```
+
+env.py 설정
+
 ![whalley score db](/assets/img/whalley-score-db.png)
 
 우선 지난주에 대략적으로 만들어둔 DB ERD를 바탕으로 SQLAlchemy 모델을 작성하였다
