--- a/_posts/study-log/dev/2025-03-12-java_oop1.md
+++ b/_posts/study-log/dev/2025-03-12-java_oop1.md
@@ -83,9 +83,9 @@ public class Main {
 
 <br>
 
-**[ 객체지향 프로그래밍의 특징 ]**
+**[ 객체지향 프로그래밍의 특징 ]**<br>
 **캡슐화 (Encapsulation)**
-> information hiding(정보은닉)
+> information hiding(정보은닉)<br>
 • 정보 가시성/접근 지정: 변수나 메서드의 가시성(visibility)를 제어해서 외부 객체에서 볼 수 있게 하거나, 보이지 않게 감출 수 있음<br>
 • 클래스 설계시 가능: Class design -> encapsulation of information
 
@@ -159,7 +159,7 @@ b.author = "생택쥐페리";
 
 **[ 생성자 사용 예시 ]**<br>
 `생성자 체이닝`
-> 하나의 생성자 안에서 자기 클래스의 다른 생성자를 호출하는 것: by `this(...)
+> 하나의 생성자 안에서 자기 클래스의 다른 생성자를 호출하는 것: by `this(...)`<br>
 • 생성자끼리만 호출 가능<br>
 • 반드시 생성자의 첫 줄에 있어야 함: 실행 순서상 생성자 체이닝에서 사용하는 생성자가 먼저 생성되어야 함<br>
 • `this()`와 `super()`는 동시에 못 씀
@@ -373,7 +373,7 @@ a.set(“Micky”, “black”);
 a.set(“gray”);
 ```
 
-- 생성자 오버로딩과의 차이
+• 생성자 오버로딩과의 차이
 
 ```java
 Box (double w, double h, double d) {…}
@@ -453,8 +453,7 @@ class Ref {
 |구분|내용|
 |---|---|
 |static variables|사본 없음->같은 타입의 모든 객체가 공유<br>• global variables, not duplicated/copied<br>• object instances share them|
-|static methods|객체 없이도, 클래스 이름으로 호출가능<br>used without object instantiation<br>1) can invoke only other static methods<br>2) can
-access only static variables<br>3) cannot use this/super|
+|static methods|객체 없이도, 클래스 이름으로 호출가능<br>used without object instantiation<br>1) can invoke only other static methods<br>2) can access only static variables<br>3) cannot use this/super|
 
 **[ 왜 static이 필요한가? ]**<br>
 • 여러 객체가 같은 값을 공유해야 할 때<br>
