--- a/_posts/study-log/dev/2025-03-11-java_02.markdown
+++ b/_posts/study-log/dev/2025-03-11-java_02.markdown
@@ -21,7 +21,7 @@ sidebar:
 **[ 원칙 ]**<br>
 • 불가능: 특수문자(`@`, `#`, `!` 등), 공백, 탭, 예약어(키워드), 논리리터럴(`null`, `true`), 널리터럴(`false`)<br>
 • 가능: 한글, 유니코드(2byte)<br>
-• 첫문자에 : 숫자불가능, 일부 기호(`_`, `$`) 가능하지만 잘 안씀<br>₩
+• 첫문자에 : 숫자불가능, 일부 기호(`_`, `$`) 가능하지만 잘 안씀<br> 
 • 길이제한 없음<br>
 • 대소문자 구별
 
@@ -76,7 +76,7 @@ class %calc { } // '%'는 특수문자
 |예외 처리|`try`, `catch`, `finally`, `throw`, `throws`|
 |패키지/임포트|`package`, `import`|
 |예약어|`instanceof`, `enum`, `native`, `strictfp`, `transient`, `assert`|
-|리터럴(예약어X_|`true`, `false`,`null`|
+|리터럴(예약어X)|`true`, `false`,`null`|
 |사용X|`const`, `goto`|
 
 `리터럴` 예약어는 아니지만 예약어처럼 동작한다
@@ -143,7 +143,7 @@ class %calc { } // '%'는 특수문자
 
 <br>
 
-**[ 종류 ]**
+**[ 종류 ]** <br>
 **1) 기본자료형(Primitive Data type)**
 > 자바에서 직접 값을 저장하는 데이터 타입
 
@@ -275,10 +275,10 @@ threeArray[1] = new String[9][]; // 2학년은 9개 반
 <br>
 
 
-(2) 클래스(class): 사용자가 정의한 객체를 생성하는 데이터 타입
-• 사용자가 직접 정의한 데이터 타입이자, 새롭고 복합적인 데이터 타입
-• 프로그램: 클래스 정의들의 모음
-• 프로그램 실행: 클래스 정의에 따라 객체를 생성하고, 서로 메시지를 주고받는 것 (‘메서드 호출’)
+(2) 클래스(class): 사용자가 정의한 객체를 생성하는 데이터 타입<br>
+• 사용자가 직접 정의한 데이터 타입이자, 새롭고 복합적인 데이터 타입<br>
+• 프로그램: 클래스 정의들의 모음<br>
+• 프로그램 실행: 클래스 정의에 따라 객체를 생성하고, 서로 메시지를 주고받는 것 (`메서드 호출`)
 
 ```java
 class Car {     //1. 클래스 정의: 새로운 참조 자료형의 선언
@@ -840,6 +840,7 @@ class ILoveJava{
 <br>
 
 **제어문의 종류**
+
 | 분류 | 종류 | 설명 |
 |:---:|:---:|:---:|
 | **조건문** | `if`, `if-else`, `switch` | 특정 조건에 따라 코드 실행 |
@@ -852,8 +853,8 @@ class ILoveJava{
 ## **조건문(Conditional Statements)**  
 > 조건문은 **특정 조건을 만족할 때만 코드가 실행**되도록 한다
 
-**(1) if 문**
-• **조건이 `true`일 때 코드 블록 실행**
+**(1) if 문**<br>
+• **조건이 `true`일 때 코드 블록 실행**<br>
 • 중괄호 `{}` 없이 단일 문장 실행 가능 (비추천)
 
 ```java
@@ -871,7 +872,7 @@ if (age >= 18) {
 
 <br>
 
-**(2) if-else 문**
+**(2) if-else 문**<br>
 • **조건이 `true`이면 `if` 블록 실행, `false`이면 `else` 블록 실행**
 
 ```java
@@ -893,8 +894,8 @@ if (age >= 18) {
 
 <br>
 
-**(3) if-else if-else 문**
-• 여러 개의 조건을 검사할 때 사용
+**(3) if-else if-else 문**<br>
+• 여러 개의 조건을 검사할 때 사용<br>
 • 위에서부터 차례대로 검사하며, 첫 번째 `true` 조건이 실행되면 나머지는 실행되지 않음
 
 ```java
@@ -923,10 +924,10 @@ if (score >= 90) {
 
 <br>
 
-**(4) switch 문**
-• 여러 개의 조건을 비교할 때 사용 (`==` 비교만 가능)
-• `case` 값과 비교하여 일치하는 경우 실행  
-• `break`를 사용하여 실행 종료 (없으면 다음 `case`까지 실행됨)
+**(4) switch 문**<br>
+• 여러 개의 조건을 비교할 때 사용 (`==` 비교만 가능)<br>
+• `case` 값과 비교하여 일치하는 경우 실행  <br>
+• `break`를 사용하여 실행 종료 (없으면 다음 `case`까지 실행됨)<br>
 • `default`는 모든 `case`가 일치하지 않을 때 실행
 
 ```java
@@ -967,8 +968,8 @@ switch (day) {
 ## **반복문(Loop Statements)**
 > 반복문은 특정 조건이 참인 동안 코드를 반복 실행한다
 
-**(1) for 문**
-• 반복 횟수가 정해진 경우 사용
+**(1) for 문**<br>
+• 반복 횟수가 정해진 경우 사용<br>
 • `초기식 → 조건식 → 실행 → 증감식` 순서로 실행
 
 ```java
@@ -993,8 +994,8 @@ Hello, Java! 5
 
 <br>
 
-**(2) while 문**
-•  **조건이 `true`인 동안 계속 반복**
+**(2) while 문**<br>
+•  **조건이 `true`인 동안 계속 반복**<br>
 • 반복 횟수가 정해지지 않은 경우 사용
 
 ```java
@@ -1013,7 +1014,7 @@ while (i <= 5) {
 
 <br>
 
-**(3) do-while 문**
+**(3) do-while 문**<br>
 • `while`과 동일하지만, **최소 1번은 실행됨** (조건 검사 전에 실행)
 
 ```java
@@ -1036,8 +1037,8 @@ do {
 ## **분기문 (Break / Continue / Return)**
 > 분기문은 **제어문의 흐름을 변경**하는 역할을 한다
 
-**(1) break 문**
-• 반복문을 즉시 종료하고 빠져나옴
+**(1) break 문**<br>
+• 반복문을 즉시 종료하고 빠져나옴<br>
 • `switch` 문에서도 사용됨
 
 ```java
@@ -1057,7 +1058,7 @@ for (int i = 1; i <= 10; i++) {
 
 <br> 
 
-**(2) continue 문**
+**(2) continue 문**<br>
 • 현재 반복을 건너뛰고 다음 반복으로 이동
 
 ```java
@@ -1076,8 +1077,8 @@ for (int i = 1; i <= 5; i++) {
 ```
 <br>
 
-**(3) return 문**
-• 메서드를 즉시 종료하고 호출한 곳으로 돌아감
+**(3) return 문**<br>
+• 메서드를 즉시 종료하고 호출한 곳으로 돌아감<br>
 • 반환값이 있는 경우 `return 값;` 사용
 
 ```java
